syntax = "proto2";

package com.scalableminds.fossildb.proto;

message HealthRequest {}
message HealthReply {
    required bool success = 1;
    optional string errorMessage = 2;
}

message GetRequest {
    required string collection = 1;
    required string key = 2;
    optional uint64 version = 3;
    optional bool mayBeEmpty = 4;
}

message GetReply {
    required bool success = 1;
    optional string errorMessage = 2;
    required bytes value = 3;
    required uint64 actualVersion = 4;
}

message PutRequest {
    required string collection = 1;
    required string key = 2;
    optional uint64 version = 3;
    required bytes value = 4;
}

message PutReply {
    required bool success = 1;
    optional string errorMessage = 2;
}

message DeleteRequest {
    required string collection = 1;
    required string key = 2;
    required uint64 version = 3;
}

message DeleteReply {
    required bool success = 1;
    optional string errorMessage = 2;
}

message GetMultipleVersionsRequest {
    required string collection = 1;
    required string key = 2;
    optional uint64 newestVersion = 4;
    optional uint64 oldestVersion = 3;
}

message GetMultipleVersionsReply {
    required bool success = 1;
    optional string errorMessage = 2;
    repeated bytes values = 3;
    repeated uint64 versions = 4;
}

message GetMultipleKeysRequest {
    required string collection = 1;
    required string key = 2;
    optional string prefix = 3;
    optional uint64 version = 4;
    optional uint32 limit = 5;
}

message GetMultipleKeysReply {
    required bool success = 1;
    optional string errorMessage = 2;
    repeated string keys = 3;
    repeated bytes values = 4;
    repeated uint64 actualVersions = 5;
}

message DeleteMultipleVersionsRequest {
    required string collection = 1;
    required string key = 2;
    optional uint64 newestVersion = 4;
    optional uint64 oldestVersion = 3;
}

message DeleteMultipleVersionsReply {
    required bool success = 1;
    optional string errorMessage = 2;
}

message ListKeysRequest {
    required string collection = 1;
    optional uint32 limit = 2;
    optional string startAfterKey = 3;
}

message ListKeysReply {
    required bool success = 1;
    optional string errorMessage = 2;
    repeated string keys = 3;
}

message ListVersionsRequest {
    required string collection = 1;
    required string key = 2;
    optional uint32 limit = 3;
    optional uint32 offset = 4;
}

message ListVersionsReply {
    required bool success = 1;
    optional string errorMessage = 2;
    repeated uint64 versions = 3;
}


message BackupRequest {}

message BackupReply {
    required bool success = 1;
    optional string errorMessage = 2;
    required uint32 id = 3;
    required uint64 timestamp = 4;
    required uint64 size = 5;
}

message RestoreFromBackupRequest {}

message RestoreFromBackupReply {
    required bool success = 1;
    optional string errorMessage = 2;
}


service FossilDB {
    rpc Health (HealthRequest) returns (HealthReply) {}
    rpc Get (GetRequest) returns (GetReply) {}
    rpc GetMultipleVersions (GetMultipleVersionsRequest) returns (GetMultipleVersionsReply) {}
    rpc GetMultipleKeys (GetMultipleKeysRequest) returns (GetMultipleKeysReply) {}
    rpc Put (PutRequest) returns (PutReply) {}
    rpc Delete (DeleteRequest) returns (DeleteReply) {}
    rpc DeleteMultipleVersions (DeleteMultipleVersionsRequest) returns (DeleteMultipleVersionsReply) {}
    rpc ListKeys (ListKeysRequest) returns (ListKeysReply) {}
    rpc ListVersions (ListVersionsRequest) returns (ListVersionsReply) {}
    rpc Backup (BackupRequest) returns (BackupReply) {}
    rpc RestoreFromBackup (RestoreFromBackupRequest) returns (RestoreFromBackupReply) {}
}
